fix bug for mobile version, make animation highlight for bubble chart when the number of jobs changing and make dropdown setting bar on mobile version

--- a/src/main/webapp/assets/sass/main.sass
+++ b/src/main/webapp/assets/sass/main.sass
@@ -48,8 +48,9 @@ a:hover
   max-height: 30px
   height: 30px
   width: 28px
-  position: relative
-  left: 0
+  position: absolute
+  left: 5px
+  z-index: 999
   i
     font-size: 20px
     cursor: pointer
