--- a/src/main/webapp/assets/sass/responsive.sass
+++ b/src/main/webapp/assets/sass/responsive.sass
@@ -8,8 +8,7 @@
     float: left
     padding-top: 10px
   .setting-content
-    width: 100%
-    height: 100%
+    max-height: inherit
   .fa-bars
     display: block
   .logo-block
@@ -119,6 +118,11 @@
     width: 100%
   .find-jobs-button a
     width: 95%
+  .ball-highlight
+    border: 2px solid rgba(255,255,255,0.9)
+    border-top: 2px solid rgba(0,0,0,0)
+    border-left: 2px solid rgba(0,0,0,0)
+    border-right: 2px solid rgba(0,0,0,0)
 
 @media (min-width: 778px)
   .fa-bars
